--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,11 @@
     width: 100%;
     height: 100%;
     text-align: center;
+    border-radius: 10px;
 }
 
 .projects-grid{
     display: flex;
 }
 
-.resume-right-col{
-    background: #27221F;
-    color: white;
-}
 
-.resume-right-col-text{
-    padding-left: 0.5em;
-}
